Flow pages are added and some pages are fixed.

--- a/Bil372_Odev1_Grup6/Views/Brand_Orgs/Create.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Brand_Orgs/Create.cshtml
@@ -13,7 +13,7 @@
 <body>
     <div class="card">
         <div class="card-header">
-            <strong>Marka Organizasyon Bağla </strong>
+            <strong>Marka Organizasyon Birleştir </strong>
         </div>
         <div class="card-body card-block">
             <form action="" method="post" class="">
