--- a/Bil372_Odev1_Grup6/Views/Features/Delete.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Features/Delete.cshtml
@@ -13,8 +13,8 @@
                 <thead>
                     <tr>
                        
-                        <th>Kodu</th>
-                        <th>Adı</th>   
+                        <th>Kod</th>
+                        <th>Ad</th>   
                         <th></th>
                     </tr>
                 </thead>
