--- a/Bil372_Odev1_Grup6/Views/Features/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Features/Read.cshtml
@@ -18,8 +18,8 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
-                            <th>Kodu</th>
-                            <th>Adı</th>
+                            <th>Kod</th>
+                            <th>Ad</th>
                             
                         </tr>
                     </thead>
