--- a/Bil372_Odev1_Grup6/Views/Manufacturers/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Manufacturers/Read.cshtml
@@ -18,11 +18,11 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
-                            <th>Kodu</th>
-                            <th>Adı</th>
+                            <th>Kod</th>
+                            <th>Ad</th>
                             <th>Adres</th>
                             <th>Şehir</th>
-                            <th>Ülke Kodu</th>
+                            <th>Ülke Kod</th>
                         </tr>
                     </thead>
                     <tbody>
