--- a/Bil372_Odev1_Grup6/Views/Product/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product/Read.cshtml
@@ -18,12 +18,12 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
-                            <th>Sistem Kodu</th>
-                            <th>Kodu</th>
-                            <th>Adı</th>
-                            <th>Kısa Adı</th>
-                            <th>Üst Kodu</th>
-                            <th>Kategorisi</th>
+                            <th>Sistem Kod</th>
+                            <th>Ürün Kod</th>
+                            <th>Ad</th>
+                            <th>Kısa Ad</th>
+                            <th>Üst Kod</th>
+                            <th>Kategori</th>
                         </tr>
                     </thead>
                     <tbody>
