--- a/Bil372_Odev1_Grup6/Views/Product_Brands/Delete.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Brands/Delete.cshtml
@@ -53,11 +53,10 @@
 </html>
 
 <script>
-   function deleteFunction(id, syscode, bcode) {
-         var url = "@Url.Action("Delete", "Product_Brands")" + "?scode=" + syscode + "&bcd=" + bcode + "&value=" + id;
-          window.location = url;
-
-
+   function deleteFunction(syscode, id, bcode) {
+       var url = '@Url.Action("Delete", "Product_Brands")';
+     url += '?scode=' + syscode + '&bcd=' + bcode + '&value=' + id;
+  window.location = url;
 
 
 
