--- a/Bil372_Odev1_Grup6/Views/Product_Brands/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Brands/Read.cshtml
@@ -18,10 +18,10 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
-                            <th>Sistem Kodu</th>
-                            <th>Üretici Kodu</th>
-                            <th>Marka Barkodu</th>
-                            <th>Marka Adı</th>
+                            <th>Sistem Kod</th>
+                            <th>Üretici Kod</th>
+                            <th>Marka Barkod</th>
+                            <th>Marka Ad</th>
                         </tr>
                     </thead>
                     <tbody>
