--- a/Bil372_Odev1_Grup6/Views/Product_Features/Search1.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Features/Search1.cshtml
@@ -31,10 +31,10 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
-                            <th>Ürün Adı</th>
-                            <th>Ürün Kodu</th>
+                            <th>Ürün Ad</th>
+                            <th>Ürün Kod</th>
                             <th>Ürün Kategori</th>
-                            <th>Özellik Adı</th>
+                            <th>Özellik Ad</th>
                             <th>Min Değer</th>
                             <th>Max Değer</th>
                         </tr>
