--- a/Bil372_Odev1_Grup6/Views/Product_Features/Search2.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product_Features/Search2.cshtml
@@ -31,9 +31,9 @@
                 <table class="table table-borderless table-striped table-earning">
                     <thead>
                         <tr>
-                            <th>Özellik Adı</th>
-                            <th>Ürün Adı</th>
-                            <th>Ürün Kodu</th>
+                            <th>Özellik Ad</th>
+                            <th>Ürün Ad</th>
+                            <th>Ürün Kod</th>
                             <th>Ürün Kategori</th>
                             <th>Min Değer</th>
                             <th>Max Değer</th>
