--- a/Bil372_Odev1_Grup6/Views/Shared/_Layout.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Shared/_Layout.cshtml
@@ -203,6 +203,21 @@
 
                             </ul>
                         </li>
+                        <li class="active has-sub">
+                            <a class="js-arrow" href="#">
+                                <i class="fas fa-copy"></i>FLOW
+                            </a>
+                            <ul class="list-unstyled navbar__sub-list js-sub-list">
+                                <li>
+                                    <a href="~/Flow/InTransfer">TRANSFERFROMIN</a>
+                                </li>
+                                <li>
+                                    <a href="~/Flow/OutTransfer">TRANSFERFROMOUT</a>
+                                </li>
+                                
+
+                            </ul>
+                        </li>
                         <li>
                             <a href="@Url.Action("LogOut","Account")">
 
