Controlllers are fixed.

--- a/Bil372_Odev1_Grup6/Views/Manufacturers/Read.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Manufacturers/Read.cshtml
@@ -32,7 +32,7 @@
                             <td>@item.MANUFACTURER_ID</td>
                             <td>@item.MANUFACTURER_NAME</td>
                             <td>@item.MANUFACTURER_ADDRESS</td>
-                            <td>@item.CITY</td>
+                            <td>@item.COUNTRY_CITY.City_Name</td>
                             <td>@item.Country_Code</td>
                         </tr>
                         }
