--- a/Bil372_Odev1_Grup6/Views/Product/Create.cshtml
+++ b/Bil372_Odev1_Grup6/Views/Product/Create.cshtml
@@ -31,7 +31,7 @@
                     <input id="pshortname" name="pshortname" placeholder="" class="form-control">
                 </div>
                 <div class="form-group">
-                    <label for="nf-email" class=" form-control-label">Ürün Üst Kodu</label>
+                    <label for="nf-email" class=" form-control-label">Ürün Üst İsim</label>
                     <input id="pparentcode" name="pparentcode" placeholder="" class="form-control">
                 </div>
                 <div class="form-group">
